Your commit message

--- a/cart.html
+++ b/cart.html
@@ -88,10 +88,10 @@ background-color: #F8F9FA;
 color: black;
 padding-top: 10px;
 padding-bottom: 10px;
-display: flex; /* Use flexbox for centering */
+display: flex; 
 border: 1px solid #ced4da;
  
-}
+} 
 
 #det{
     margin-left: 25%;
