Your commit message

--- a/1.html
+++ b/1.html
@@ -275,6 +275,73 @@
 
         }
     </style>
+
+
+
+<style>
+
+    .footer{
+        width: 100%;
+        height: 3.8rem;
+        background-color: rgb(255, 255, 255);
+        position: fixed;
+        bottom: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: center; /* Horizontally center the items */
+        align-items: center; 
+        box-shadow: 0px -10px 10px rgba(0, 0, 0, 0.1);
+
+
+
+    }
+    #hm,.cartt{
+width: 50%;
+justify-content: center;
+    }
+    .cartt {
+        display: inline-flex;
+align-items: flex-start;
+justify-content: center;
+}
+#rd{
+color: rgb(255 255 255);
+font-weight: 700;
+
+background-color: rgb(255 78 99);
+
+
+
+color: white;
+font-size: 12px;
+font-weight: bold;
+width: 18px;
+height: 18px;
+display: flex;
+align-items: center;
+justify-content: center;
+border-radius: 50%;
+margin-left: -10px; /* Adjusts overlap with the SVG */
+margin-top: -5px;  /* Moves badge upwards */
+box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
+z-index: 1; /* Ensures the badge is above the SVG */
+
+
+}
+
+
+#cartt00{
+opacity: .5;
+justify-content: center;
+text-align: center;
+}
+
+
+ 
+
+
+</style>
+
 </head>
 
 <body>
@@ -345,6 +412,24 @@
 
 
 
+
+    <div class="footer">
+        
+        <svg id="hm" xmlns="http://www.w3.org/2000/svg" width="18px" height="20px" viewBox="0 0 17.996 20.442"><path d="M48.187,7.823,39.851.182A.7.7,0,0,0,38.9.2L31.03,7.841a.7.7,0,0,0-.211.5V19.311a.694.694,0,0,0,.694.694H37.3A.694.694,0,0,0,38,19.311V14.217h3.242v5.095a.694.694,0,0,0,.694.694h5.789a.694.694,0,0,0,.694-.694V8.335a.7.7,0,0,0-.228-.512ZM47.023,18.617h-4.4V13.522a.694.694,0,0,0-.694-.694H37.3a.694.694,0,0,0-.694.694v5.095H32.2V8.63l7.192-6.98L47.02,8.642v9.975Z" transform="translate(-30.619 0.236)" fill="#777777" stroke="currentColor" stroke-width="0.4"></path></svg> 
+
+        <div id="cartt00" class="cartt">
+            
+            <svg id="cartt0" width="32" height="32" viewBox="0 0 32 32" fill="none" class="text-opacity-100 brightness-0" xmlns="http://www.w3.org/2000/svg"><path d="M11.5 11.67V10.7C11.5 8.45001 13.31 6.24001 15.56 6.03001C18.24 5.77001 20.5 7.88001 20.5 10.51V11.89" stroke="#000000" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path><path d="M12.9998 26H18.9998C23.0198 26 23.7398 24.39 23.9498 22.43L24.6998 16.43C24.9698 13.99 24.2698 12 19.9998 12H11.9998C7.72983 12 7.02983 13.99 7.29983 16.43L8.04983 22.43C8.25983 24.39 8.97983 26 12.9998 26Z" stroke="#000000" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path><path d="M19.4955 16H19.5045" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path><path d="M12.4945 16H12.5035" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+            <span id="rd">?</span>
+
+
+        </div>
+
+    </div>
+
+
+
+
     <div class="my-slider">
         <div><img src="https://mcubd.github.io/mcubd/logoimg/v.jpg" alt="Image 1"></div>
         <div><img src="https://mcubd.github.io/mcubd/logoimg/vv.jpg" alt="Image 2"></div>
@@ -377,7 +462,17 @@
 
 
 
+<script>
 
+    document.getElementById("hm").onclick = function () {
+        window.location.href = './1.html';
+    }
+
+    document.getElementById("cartt00").onclick = function () {
+        window.location.href = './cart.html';
+
+}
+</script>
 
 
     <script>
@@ -456,6 +551,8 @@
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
+
+        import { getFirestore, collection, addDoc, query, orderBy, limit, getDocs, getDoc, where, setDoc, Timestamp, updateDoc, doc, arrayUnion } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-firestore.js";
         import { getAuth, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-auth.js";
 
         // TODO: Add SDKs for Firebase products that you want to use
@@ -473,7 +570,11 @@
         };
 
         // Initialize Firebase
+ 
+
+
         const app = initializeApp(firebaseConfig);
+        let firestore0 = getFirestore(app);
         const auth = getAuth(app);
         auth.languageCode = 'en';
         const provider = new GoogleAuthProvider();
@@ -542,6 +643,23 @@
             document.getElementById('svglogin').style.display = 'none';
             document.getElementById('txtlogin').style.display = 'none';
             document.getElementById('dp').style.display = '';
+
+
+
+
+            let gmail = getCookie("boiEmail")
+ 
+
+            const usersRef = collection(firestore0, "boiUser");
+            const q = query(usersRef, where("gmail", "==", gmail));
+            const querySnapshot = await getDocs(q);
+
+
+                    document.getElementById("rd").innerText = querySnapshot.docs[0].data().cart.length
+
+
+
+
 
         } else {
             document.getElementById('svglogin').style.display = '';
