--- a/shipping.html
+++ b/shipping.html
@@ -18,7 +18,7 @@
             padding: 0;
             background-color: #EEEEEE;
             font-family: "Roboto", sans-serif;
-
+            user-select: none;
             font-style: normal;
         }
 
