--- a/order.html
+++ b/order.html
@@ -10,6 +10,7 @@
     <style>
         /* footer only */
         .footer {
+            z-index: 55;
                 width: 100%;
                 height: 3.8rem;
                 background-color: rgb(255, 255, 255);
@@ -95,7 +96,7 @@
             padding: 0;
             background-color: #EEEEEE;
             font-family: "Roboto", sans-serif;
-
+            user-select: none;
             font-style: normal;
         }
 
@@ -107,6 +108,7 @@
 
 
         }
+ 
 
         li {
             list-style: none;
@@ -287,7 +289,7 @@
             padding-top: 30px;
             padding-bottom: 30px;
 
-            margin-bottom: 25px;
+            margin-bottom: 100px;
         }
 
         .mid2 {
