Your commit message

--- a/ac.html
+++ b/ac.html
@@ -298,7 +298,7 @@
     <script>
 
         document.getElementById("hm").onclick = function () {
-            window.location.href = './1.html';
+            window.location.href = './index.html';
         }
 
         document.getElementById("cartt00").onclick = function () {
