--- a/book.html
+++ b/book.html
@@ -520,7 +520,7 @@ border-radius: 8px;
     <header>
 
         <div class="logos">
-            <a href="./1.html">
+            <a href="./index.html">
 
             <div class="logos1">
                 <span>
@@ -616,7 +616,7 @@ border-radius: 8px;
     <script>
 
         document.getElementById("hm").onclick = function () {
-            window.location.href = './1.html';
+            window.location.href = './index.html';
         }
 
         document.getElementById("cartt00").onclick = function () {
