--- a/cart.html
+++ b/cart.html
@@ -558,7 +558,7 @@
     <header>
 
         <div class="logos">
-            <a href="./1.html">
+            <a href="./index.html">
 
             <div class="logos1">
                 <span>
@@ -695,7 +695,7 @@
         }
 
         document.getElementById("hm").onclick = function () {
-            window.location.href = './1.html';
+            window.location.href = './index.html';
         }
     
         document.getElementById("cartt00").onclick = function () {
