--- a/order.html
+++ b/order.html
@@ -536,7 +536,7 @@
     <script>
 
         document.getElementById("hm").onclick = function () {
-            window.location.href = './1.html';
+            window.location.href = './index.html';
         }
     
         document.getElementById("cartt00").onclick = function () {
