--- a/shipping.html
+++ b/shipping.html
@@ -602,7 +602,7 @@
     <script>
 
         document.getElementById("hm").onclick = function () {
-            window.location.href = './1.html';
+            window.location.href = './index.html';
         }
     
         document.getElementById("cartt00").onclick = function () {
