Your commit message

--- a/cart.html
+++ b/cart.html
@@ -941,6 +941,8 @@
                             mrp = Number(mrp) + Number(el.innerText)
 
                         });
+
+                        console.log(mrp);
                         document.getElementById("price").innerText = mrp;
                        
                         document.getElementById("ttl4").innerText = mrp;
