--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
 
         .twooo {
             padding-bottom: 2px;
+		display: none;
 
             border-bottom: 1px solid #dee2e6 !important;
         }
