--- a/index.html
+++ b/index.html
@@ -378,10 +378,10 @@
 
             <div class="logos1">
                 <span>
-                    <img src="https://medeasy.health/assets/images/medEasyIcon.svg" alt="">
+                    <img src="https://firebasestorage.googleapis.com/v0/b/test2-5bbd8.appspot.com/o/chat%2Fmksuf.svg?alt=media" alt="">
                 </span>
                 <span id="title0">
-                    MedEasy
+                    
                 </span>
             </div>
 
