--- a/shipping.html
+++ b/shipping.html
@@ -710,7 +710,9 @@
                     orderId: randomString,
                     customerId: String(getCookie("boiEmail")),
                     orderItems: userDoc6.cart,
-                    status: "pending",
+                    status: "1",
+                    zila:zila,
+                    addr:addr,
                     date: Timestamp.now()
                 });
 
