--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
             <div class="logos1">
                 <span>
-                    <img height="45px" src="https://firebasestorage.googleapis.com/v0/b/test2-5bbd8.appspot.com/o/chat%2Fmksuf-Photoroomr.png?alt=media&token=466c9791-bd45-4ae2-b450-14b0b37b53ff" alt="">
+                    <img height="45px" src="https://firebasestorage.googleapis.com/v0/b/test2-5bbd8.appspot.com/o/chat%2Fchat_mksuf-Photoroomr-removebg-preview.png?alt=media&token=1cb5a66a-a615-422b-8422-8f13efedb1da" alt="">
                 </span>
                 <span id="title0">
                     
