--- a/book.html
+++ b/book.html
@@ -524,11 +524,9 @@ border-radius: 8px;
 
             <div class="logos1">
                 <span>
-                    <img src="https://medeasy.health/assets/images/medEasyIcon.svg" alt="">
+                    <img src="https://firebasestorage.googleapis.com/v0/b/test2-5bbd8.appspot.com/o/chat%2Fchat_mksuf-Photoroomr-removebg-preview.png?alt=media&token=1cb5a66a-a615-422b-8422-8f13efedb1da" height="45px" alt="">
                 </span>
-                <span id="title0">
-                    MedEasy
-                </span>
+           
             </div>
         </a>
 
