--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>maktabatussuffah</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
 
@@ -479,9 +479,9 @@
 
 
     <div class="my-slider">
-        <div><img src="https://mcubd.github.io/mcubd/logoimg/v.jpg" alt="Image 1"></div>
-        <div><img src="https://mcubd.github.io/mcubd/logoimg/vv.jpg" alt="Image 2"></div>
-        <div><img src="https://mcubd.github.io/mcubd/logoimg/vvv.jpg" alt="Image 3"></div>
+        <div><img src="https://mcubd.vercel.app/logoimg/v.jpg" alt="Image 1"></div>
+        <div><img src="https://mcubd.vercel.app/logoimg/vv.jpg" alt="Image 2"></div>
+        <div><img src="https://mcubd.vercel.app/logoimg/vvv.jpg" alt="Image 3"></div>
     </div>
 
 
